# IoT

./: CMakeLists.txt  README.md  gps.c  gps.h  main.c  serial_io.h  serial_io_win32.c
Ex2/: gps.c  serial_io.h
Ex3/: README.txt  cellular.c  cellular.h  main.c  serial_io.h  serial_io_win32.c
Ex3/Submission/: ex3.rar
Ex4/: cellular.c  cellular.h  ex4.rar  gps.c  gps.h  main.c  serial_io_cellular.h  serial_io_gps.h  serial_io_win32.c  serial_io_win32_cellular.c  serial_io_win32_gps.c
Ex4/simplicity/: ex4.sls
Ex4/simplicity/ex4/external_copied_files/: displayconfigapp.h
Ex4/simplicity/ex4/src/: cellular.c  gps.c  serial_io_uart.h  serial_io_usart.c  serial_io_usart.h
Ex5/: README  cellular.h  gps.h  main.c  serial_io_uart.c
